新增环境变量

--- a/.github/workflows/UnicomTask.yml
+++ b/.github/workflows/UnicomTask.yml
@@ -33,5 +33,9 @@ jobs:
         USERNAME_COVER: ${{ secrets.USERNAME_COVER }}
         PASSWORD_COVER: ${{ secrets.PASSWORD_COVER }}
         APPID_COVER: ${{secrets.APPID_COVER}}
+        EMAIL_COVER: ${{secrets.EMAIL_COVER}}
+        BOT_EMAIL: ${{secrets.BOT_EMAIL}}
+        BOT_PASSWORD: ${{secrets.BOT_PASSWORD}}
+        LOTTERY_NUM: ${{secrets.LOTTERY_NUM}}
       run: |
         python main.py
