--- a/.github/workflows/UnicomTask.yml
+++ b/.github/workflows/UnicomTask.yml
@@ -15,8 +15,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set time zone
-      run: sudo timedatectl set-timezone 'Asia/Shanghai'
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
@@ -32,13 +30,7 @@ jobs:
         pip install -r requirements.txt
     - name: Build and publish
       env:
-        USERNAME_COVER: ${{ secrets.USERNAME_COVER }}
-        PASSWORD_COVER: ${{ secrets.PASSWORD_COVER }}
-        APPID_COVER: ${{ secrets.APPID_COVER }}
-        EMAIL_COVER: ${{ secrets.EMAIL_COVER }}
-        LOTTERY_NUM: ${{ secrets.LOTTERY_NUM }}
-        DINGTALK_WEBHOOK: ${{ secrets.DINGTALK_WEBHOOK }}
-        TG_TOKEN: ${{ secrets.TG_TOKEN }}
-        TG_USERID: ${{ secrets.TG_USERID }}
+        USERS_COVER: ${{ secrets.USERS_COVER }}
       run: |
+        echo "$USERS_COVER" > ./config.json
         python main.py
