--- a/config.json
+++ b/config.json
@@ -3,10 +3,10 @@
         "username": "手机号（必填）",
         "password": "服务密码（必填）",
         "appId": "appId（必填）",
-        "email": "邮箱（选填，不填请留空）",
-        "lotteryNum": "抽奖次数（选填，不填请留空）",
-        "dingtalkWebhook": "钉钉通知 https://oapi.dingtalk.com/robot/send?access_token=xxxx（选填，不填请留空）",
-        "tgToken": "Tg通知 token（选填，不填请留空）",
-        "tgUserId": "Tg通知 群组Id（选填，不填请留空）"
+        "email": "邮箱（选填，不填请删除此行）",
+        "lotteryNum": "抽奖次数（选填，不填请删除此行）",
+        "dingtalkWebhook": "钉钉通知 https://oapi.dingtalk.com/robot/send?access_token=xxxx（选填，不填请删除此行）",
+        "tgToken": "Tg通知 token（选填，不填请删除此行）",
+        "tgUserId": "Tg通知 群组Id（选填，不填请删除此行）"
     }
 ]
